#12 fixed spacing, padding on home page

--- a/index.css
+++ b/index.css
@@ -128,10 +128,11 @@ nav .fa{
     margin: auto;
     text-align: center;
     padding-top: 60px;
+    padding-bottom: 60px;
 }
 .heading-2{
     font-size: 36px;
-    color: #777;
+    color: rgba(15, 14, 14, 0.96);
     font-weight: 300;
     line-height: 10px;
     padding: 10px;
@@ -147,7 +148,6 @@ nav .fa{
     flex-basis: 31%;
     background: #f1f1f1;
     border-radius: 10px;
-    margin-bottom: 5%;
     padding: 29px 20px;
     box-sizing: border-box;
     transition: 0.7s;
@@ -193,11 +193,11 @@ p{
     margin: auto;
     text-align: center;
     padding-top: 60px;
+    padding-bottom: 60px;
 }
 .campus-coln{
     flex-basis: 31%;
     border-radius: 10px;
-    margin-bottom: 30px;
     position: relative;
     overflow: hidden;
     transition: 0.4s;
@@ -249,12 +249,12 @@ p{
     margin: auto;
     text-align: center;
     color: white;
-    padding-top: 40px;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 .facilities-coln{
     flex-basis: 31%;
     border-radius: 10px;
-    margin-bottom: 5%;
     text-align: left;
 }
 .facilities-coln img{
@@ -278,11 +278,12 @@ p{
     margin: auto;
     width: 80%;
     padding-top: 60px;
+    padding-bottom: 60px;
 }
 .testimonials-coln{
     flex-basis: 44%;
     border-radius: 10px;
-    margin-bottom: 5%;
+    /* margin-bottom: 5%; */
     text-align: left;
     background-color: #fff3f3;
     padding: 25px;
@@ -290,6 +291,11 @@ p{
     display: flex;
 
 }
+.testimonials-coln i{
+   color: orange;
+
+}
+
 .testimonials-coln img{
     height: 40px;
     border-radius: 50%;
@@ -306,7 +312,7 @@ p{
 }
 .testimonials-coln h3{
     text-align: left;
-    margin: 15px;
+    margin: 15px 0px 10px 0px;
     font-family: Arial;
 }
 @media (max-width:700px) {
@@ -333,7 +339,7 @@ p{
     padding: 0;
    font-family: helvetica;
    font-weight: bold;
-   margin-bottom: 10px;
+   margin-bottom: 20px;
 }
 
 /* footer */
